JJ/TJ: new setup for logwriter

--- a/doc/license.conf
+++ b/doc/license.conf
@@ -3,6 +3,8 @@
     "description": "\"Gustos-Meresco\" is a set of Gustos components for Meresco based projects.",
     "license": "GPLv2",
     "copyrights": [
-        {"name": "Seecr (Seek You Too B.V.)", "url": "http://seecr.nl", "years": [2014]}
+        {"name": "Seecr (Seek You Too B.V.)", "url": "http://seecr.nl", "years": [2014]},
+        {"name": "Maastricht University Library", "url": "http://www.maastrichtuniversity.nl/web/Library/home.htm", "years": [2014] },
+        {"name": "SURF", "url": "http://www.surf.nl", "years": [2014]}
     ]
 }
