HM/TJ: ResponseTimeReport is now more flexible. Added tests for Report.

--- a/doc/license.conf
+++ b/doc/license.conf
@@ -4,6 +4,9 @@
     "license": "GPLv2",
     "copyrights": [
         {"name": "Seecr (Seek You Too B.V.)", "url": "http://seecr.nl", "years": [2014]},
+        {"name": "Stichting Bibliotheek.nl (BNL)", "url": "http://www.bibliotheek.nl", "years": [2014]}
+    ],
+    "copyrights_unused": [
         {"name": "Maastricht University Library", "url": "http://www.maastrichtuniversity.nl/web/Library/home.htm", "years": [2014] },
         {"name": "SURF", "url": "http://www.surf.nl", "years": [2014]}
     ]
