HM/TJ: use report with call instead of do.

--- a/doc/license.conf
+++ b/doc/license.conf
@@ -3,11 +3,12 @@
     "description": "\"Gustos-Meresco\" is a set of Gustos components for Meresco based projects.",
     "license": "GPLv2",
     "copyrights": [
-        {"name": "Seecr (Seek You Too B.V.)", "url": "http://seecr.nl", "years": [2014]},
-        {"name": "Stichting Bibliotheek.nl (BNL)", "url": "http://www.bibliotheek.nl", "years": [2014]}
+        {"name": "Seecr (Seek You Too B.V.)", "url": "http://seecr.nl"},
+        {"name": "Stichting Kennisnet", "url": "http://www.kennisnet.nl"}
     ],
     "copyrights_unused": [
-        {"name": "Maastricht University Library", "url": "http://www.maastrichtuniversity.nl/web/Library/home.htm", "years": [2014] },
-        {"name": "SURF", "url": "http://www.surf.nl", "years": [2014]}
+        {"name": "Stichting Bibliotheek.nl (BNL)", "url": "http://www.bibliotheek.nl"},
+        {"name": "Maastricht University Library", "url": "http://www.maastrichtuniversity.nl/web/Library/home.htm" },
+        {"name": "SURF", "url": "http://www.surf.nl"}
     ]
 }
