--- a/doc/license.conf
+++ b/doc/license.conf
@@ -3,12 +3,10 @@
     "description": "\"Gustos-Meresco\" is a set of Gustos components for Meresco based projects.",
     "license": "GPLv2",
     "copyrights": [
-        {"name": "Seecr (Seek You Too B.V.)", "url": "http://seecr.nl"},
-        {"name": "Stichting Kennisnet", "url": "http://www.kennisnet.nl"}
+        {"name": "Seecr (Seek You Too B.V.)", "url": "https://seecr.nl"}
     ],
     "copyrights_unused": [
-        {"name": "Stichting Bibliotheek.nl (BNL)", "url": "http://www.bibliotheek.nl"},
-        {"name": "Maastricht University Library", "url": "http://www.maastrichtuniversity.nl/web/Library/home.htm" },
-        {"name": "SURF", "url": "http://www.surf.nl"}
+        {"name": "Stichting Kennisnet", "url": "http://www.kennisnet.nl"},
+        {"name": "SURF", "url": "https://www.surf.nl"}
     ]
 }
